--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,12 @@ en:
   delete_fall: "Delete fail!"
   profile_updated: "Profile updated"
   update_fall: "Update fail!"
+  check_emai: "Please check your email to activate your account"
+  title_email: "Account activation"
+  account_activations:
+    edit:
+      activated: "Account activated!"
+      invalid_active: "Invalid activation link"
   layouts:
     header:
       user: "User"
@@ -64,3 +70,9 @@ en:
       text: "New user? ? %{link_sign_up}"
       link_sign_up_text: "Sign up now!"
       remember_me: "Remember me on this computer"
+    create:
+      message: ""Account not activated. Check your email for the activation link.
+  user_mailer:
+    account_activation: "Welcome to the Sample App! Click on the link below to activate your account:"
+    activate: "Activate"
+    hello: "Xin chào"
